lang/c/include/vtfppc/VTF.h

typedef const void* vtfpp_resource_handle_t;
typedef void* vtfpp_vtf_handle_t;
VTFPP_API vtfpp_image_conversion_resize_method_e vtfpp_vtf_get_image_width_resize_method(vtfpp_vtf_handle_t handle);
VTFPP_API vtfpp_image_conversion_resize_method_e vtfpp_vtf_get_image_height_resize_method(vtfpp_vtf_handle_t handle);
VTFPP_API void vtfpp_vtf_set_image_resize_methods(vtfpp_vtf_handle_t handle, vtfpp_image_conversion_resize_method_e imageWidthResizeMethod, vtfpp_image_conversion_resize_method_e imageHeightResizeMethod);
VTFPP_API void vtfpp_vtf_set_image_width_resize_method(vtfpp_vtf_handle_t handle, vtfpp_image_conversion_resize_method_e imageWidthResizeMethod);
VTFPP_API void vtfpp_vtf_set_image_height_resize_method(vtfpp_vtf_handle_t handle, vtfpp_image_conversion_resize_method_e imageHeightResizeMethod);
VTFPP_API uint16_t vtfpp_vtf_get_width(vtfpp_vtf_handle_t handle, uint8_t mip);
VTFPP_API uint16_t vtfpp_vtf_get_padded_width(vtfpp_vtf_handle_t handle, uint8_t mip);
VTFPP_API uint16_t vtfpp_vtf_get_height(vtfpp_vtf_handle_t handle, uint8_t mip);
VTFPP_API uint16_t vtfpp_vtf_get_padded_height(vtfpp_vtf_handle_t handle, uint8_t mip);
VTFPP_API void vtfpp_vtf_set_size(vtfpp_vtf_handle_t handle, uint16_t width, uint16_t height, vtfpp_image_conversion_resize_filter_e filter);
VTFPP_API uint32_t vtfpp_vtf_get_flags(vtfpp_vtf_handle_t handle);
VTFPP_API void vtfpp_vtf_set_flags(vtfpp_vtf_handle_t handle, uint32_t flags);
VTFPP_API void vtfpp_vtf_add_flags(vtfpp_vtf_handle_t handle, uint32_t flags);
VTFPP_API void vtfpp_vtf_remove_flags(vtfpp_vtf_handle_t handle, uint32_t flags);
VTFPP_API int vtfpp_vtf_is_srgb(vtfpp_vtf_handle_t handle);
VTFPP_API void vtfpp_vtf_set_srgb(vtfpp_vtf_handle_t handle, int srgb);
VTFPP_API void vtfpp_vtf_compute_transparency_flags(vtfpp_vtf_handle_t handle);
VTFPP_API vtfpp_image_format_e vtfpp_vtf_get_default_compressed_format(vtfpp_image_format_e inputFormat, uint32_t version, int isCubeMap);
VTFPP_API vtfpp_image_format_e vtfpp_vtf_get_format(vtfpp_vtf_handle_t handle);
VTFPP_API void vtfpp_vtf_set_format(vtfpp_vtf_handle_t handle, vtfpp_image_format_e format, vtfpp_image_conversion_resize_filter_e filter, float quality);
VTFPP_API uint8_t vtfpp_vtf_get_mip_count(vtfpp_vtf_handle_t handle);
VTFPP_API int vtfpp_vtf_set_mip_count(vtfpp_vtf_handle_t handle, uint8_t mipCount);
VTFPP_API int vtfpp_vtf_set_recommended_mip_count(vtfpp_vtf_handle_t handle);
VTFPP_API void vtfpp_vtf_compute_mips(vtfpp_vtf_handle_t handle, vtfpp_image_conversion_resize_filter_e filter);
VTFPP_API uint16_t vtfpp_vtf_get_frame_count(vtfpp_vtf_handle_t handle);
VTFPP_API int vtfpp_vtf_set_frame_count(vtfpp_vtf_handle_t handle, uint16_t frameCount);
VTFPP_API uint8_t vtfpp_vtf_get_face_count(vtfpp_vtf_handle_t handle);
VTFPP_API int vtfpp_vtf_set_face_count(vtfpp_vtf_handle_t handle, int isCubeMap);
VTFPP_API uint16_t vtfpp_vtf_get_depth(vtfpp_vtf_handle_t handle, uint8_t mip);
VTFPP_API int vtfpp_vtf_set_depth(vtfpp_vtf_handle_t handle, uint16_t depth);
VTFPP_API int vtfpp_vtf_set_frame_face_and_depth(vtfpp_vtf_handle_t handle, uint16_t frameCount, int isCubeMap, uint16_t depth);
VTFPP_API uint16_t vtfpp_vtf_get_start_frame(vtfpp_vtf_handle_t handle);
VTFPP_API void vtfpp_vtf_set_start_frame(vtfpp_vtf_handle_t handle, uint16_t startFrame);
VTFPP_API void vtfpp_vtf_get_reflectivity(vtfpp_vtf_handle_t handle, float* r, float* g, float* b);
VTFPP_API void vtfpp_vtf_set_reflectivity(vtfpp_vtf_handle_t handle, float r, float g, float b);
VTFPP_API void vtfpp_vtf_compute_reflectivity(vtfpp_vtf_handle_t handle);
VTFPP_API float vtfpp_vtf_get_bumpmap_scale(vtfpp_vtf_handle_t handle);
VTFPP_API void vtfpp_vtf_set_bumpmap_scale(vtfpp_vtf_handle_t handle, float bumpMapScale);
VTFPP_API vtfpp_image_format_e vtfpp_vtf_get_thumbnail_format(vtfpp_vtf_handle_t handle);
VTFPP_API uint8_t vtfpp_vtf_get_thumbnail_width(vtfpp_vtf_handle_t handle);
VTFPP_API uint8_t vtfpp_vtf_get_thumbnail_height(vtfpp_vtf_handle_t handle);
VTFPP_API uint8_t vtfpp_vtf_get_fallback_width(vtfpp_vtf_handle_t handle, uint8_t mip);
VTFPP_API uint8_t vtfpp_vtf_get_padded_fallback_width(vtfpp_vtf_handle_t handle, uint8_t mip);
VTFPP_API uint8_t vtfpp_vtf_get_fallback_height(vtfpp_vtf_handle_t handle, uint8_t mip);
VTFPP_API uint8_t vtfpp_vtf_get_padded_fallback_height(vtfpp_vtf_handle_t handle, uint8_t mip);
VTFPP_API uint8_t vtfpp_vtf_get_fallback_mip_count(vtfpp_vtf_handle_t handle);
VTFPP_API int vtfpp_vtf_has_native_resource_support(vtfpp_vtf_handle_t handle);
VTFPP_API uint32_t vtfpp_vtf_get_resources_count(vtfpp_vtf_handle_t handle);
VTFPP_API vtfpp_resource_handle_t vtfpp_vtf_get_resource_at_index(vtfpp_vtf_handle_t handle, uint32_t index);
VTFPP_API vtfpp_resource_handle_t vtfpp_vtf_get_resource_with_type(vtfpp_vtf_handle_t handle, vtfpp_resource_type_e type);
VTFPP_API sourcepp_buffer_t vtfpp_vtf_get_palette_resource_frame(vtfpp_vtf_handle_t handle, uint16_t frame); // REQUIRES MANUAL FREE: sourcepp_buffer_free
VTFPP_API sourcepp_buffer_t vtfpp_vtf_get_particle_sheet_frame_data_raw(vtfpp_vtf_handle_t handle, uint16_t* width, uint16_t* height, uint32_t shtSequenceID, uint32_t shtFrame, uint8_t shtBounds, uint8_t mip, uint16_t frame, uint8_t face, uint16_t slice); // REQUIRES MANUAL FREE: sourcepp_buffer_free
VTFPP_API sourcepp_buffer_t vtfpp_vtf_get_particle_sheet_frame_data_as(vtfpp_vtf_handle_t handle, vtfpp_image_format_e format, uint16_t* width, uint16_t* height, uint32_t shtSequenceID, uint32_t shtFrame, uint8_t shtBounds, uint8_t mip, uint16_t frame, uint8_t face, uint16_t slice); // REQUIRES MANUAL FREE: sourcepp_buffer_free
VTFPP_API sourcepp_buffer_t vtfpp_vtf_get_particle_sheet_frame_data_as_rgba8888(vtfpp_vtf_handle_t handle, uint16_t* width, uint16_t* height, uint32_t shtSequenceID, uint32_t shtFrame, uint8_t shtBounds, uint8_t mip, uint16_t frame, uint8_t face, uint16_t slice); // REQUIRES MANUAL FREE: sourcepp_buffer_free
VTFPP_API void vtfpp_vtf_set_particle_sheet_resource(vtfpp_vtf_handle_t handle, vtfpp_sht_handle_t sht);
VTFPP_API void vtfpp_vtf_remove_particle_sheet_resource(vtfpp_vtf_handle_t handle);
VTFPP_API void vtfpp_vtf_set_crc_resource(vtfpp_vtf_handle_t handle, uint32_t value);
VTFPP_API void vtfpp_vtf_remove_crc_resource(vtfpp_vtf_handle_t handle);
VTFPP_API void vtfpp_vtf_set_lod_resource(vtfpp_vtf_handle_t handle, uint8_t u, uint8_t v, uint8_t u360, uint8_t v360);
VTFPP_API void vtfpp_vtf_remove_lod_resource(vtfpp_vtf_handle_t handle);
VTFPP_API void vtfpp_vtf_set_extended_flags_resource(vtfpp_vtf_handle_t handle, uint32_t value);
VTFPP_API void vtfpp_vtf_remove_extended_flags_resource(vtfpp_vtf_handle_t handle);
VTFPP_API void vtfpp_vtf_set_keyvalues_data_resource(vtfpp_vtf_handle_t handle, const char* value);
VTFPP_API void vtfpp_vtf_remove_keyvalues_data_resource(vtfpp_vtf_handle_t handle);
VTFPP_API void vtfpp_vtf_set_hotspot_data_resource(vtfpp_vtf_handle_t handle, vtfpp_hot_handle_t hot);
VTFPP_API void vtfpp_vtf_remove_hotspot_data_resource(vtfpp_vtf_handle_t handle);
VTFPP_API int16_t vtfpp_vtf_get_compression_level(vtfpp_vtf_handle_t handle);
VTFPP_API void vtfpp_vtf_set_compression_level(vtfpp_vtf_handle_t handle, int16_t compressionLevel);
VTFPP_API vtfpp_compression_method_e vtfpp_vtf_get_compression_method(vtfpp_vtf_handle_t handle);
VTFPP_API void vtfpp_vtf_set_compression_method(vtfpp_vtf_handle_t handle, vtfpp_compression_method_e compressionMethod);
VTFPP_API int vtfpp_vtf_has_image_data(vtfpp_vtf_handle_t handle);
VTFPP_API const unsigned char* vtfpp_vtf_get_image_data_raw(vtfpp_vtf_handle_t handle, size_t* imageLen, uint8_t mip, uint16_t frame, uint8_t face, uint16_t slice);
VTFPP_API sourcepp_buffer_t vtfpp_vtf_get_image_data_as(vtfpp_vtf_handle_t handle, vtfpp_image_format_e format, uint8_t mip, uint16_t frame, uint8_t face, uint16_t slice); // REQUIRES MANUAL FREE: sourcepp_buffer_free
VTFPP_API sourcepp_buffer_t vtfpp_vtf_get_image_data_as_rgba8888(vtfpp_vtf_handle_t handle, uint8_t mip, uint16_t frame, uint8_t face, uint16_t slice); // REQUIRES MANUAL FREE: sourcepp_buffer_free
VTFPP_API int vtfpp_vtf_set_image_from_mem(vtfpp_vtf_handle_t handle, const unsigned char* imageData, size_t imageLen, vtfpp_image_format_e format, uint16_t width, uint16_t height, vtfpp_image_conversion_resize_filter_e filter, uint8_t mip, uint16_t frame, uint8_t face, uint16_t slice, float quality);
VTFPP_API int vtfpp_vtf_set_image_from_file(vtfpp_vtf_handle_t handle, const char* imagePath, vtfpp_image_conversion_resize_filter_e filter, uint8_t mip, uint16_t frame, uint8_t face, uint16_t slice, float quality, vtfpp_image_conversion_resize_bounds_t resizeBounds);
VTFPP_API int vtfpp_vtf_save_image_to_file(vtfpp_vtf_handle_t handle, const char* imagePath, uint8_t mip, uint16_t frame, uint8_t face, uint16_t slice, vtfpp_image_conversion_file_format_e fileFormat);
VTFPP_API int vtfpp_vtf_has_thumbnail_data(vtfpp_vtf_handle_t handle);
VTFPP_API const unsigned char* vtfpp_vtf_get_thumbnail_data_raw(vtfpp_vtf_handle_t handle, size_t* imageLen);
VTFPP_API sourcepp_buffer_t vtfpp_vtf_get_thumbnail_data_as(vtfpp_vtf_handle_t handle, vtfpp_image_format_e format); // REQUIRES MANUAL FREE: sourcepp_buffer_free
VTFPP_API sourcepp_buffer_t vtfpp_vtf_get_thumbnail_data_as_rgba8888(vtfpp_vtf_handle_t handle); // REQUIRES MANUAL FREE: sourcepp_buffer_free
VTFPP_API void vtfpp_vtf_set_thumbnail_from_mem(vtfpp_vtf_handle_t handle, const unsigned char* imageData, size_t imageLen, vtfpp_image_format_e format, uint16_t width, uint16_t height, float quality);
VTFPP_API void vtfpp_vtf_set_thumbnail_from_file(vtfpp_vtf_handle_t handle, const char* imagePath, float quality);
VTFPP_API void vtfpp_vtf_compute_thumbnail(vtfpp_vtf_handle_t handle, vtfpp_image_conversion_resize_filter_e filter, float quality);
VTFPP_API void vtfpp_vtf_remove_thumbnail(vtfpp_vtf_handle_t handle);
VTFPP_API int vtfpp_vtf_save_thumbnail_to_file(vtfpp_vtf_handle_t handle, const char* imagePath, vtfpp_image_conversion_file_format_e fileFormat);
VTFPP_API int vtfpp_vtf_has_fallback_data(vtfpp_vtf_handle_t handle);
VTFPP_API const unsigned char* vtfpp_vtf_get_fallback_data_raw(vtfpp_vtf_handle_t handle, size_t* imageLen, uint8_t mip, uint16_t frame, uint8_t face);
VTFPP_API sourcepp_buffer_t vtfpp_vtf_get_fallback_data_as(vtfpp_vtf_handle_t handle, vtfpp_image_format_e format, uint8_t mip, uint16_t frame, uint8_t face); // REQUIRES MANUAL FREE: sourcepp_buffer_free
VTFPP_API sourcepp_buffer_t vtfpp_vtf_get_fallback_data_as_rgba8888(vtfpp_vtf_handle_t handle, uint8_t mip, uint16_t frame, uint8_t face); // REQUIRES MANUAL FREE: sourcepp_buffer_free
VTFPP_API void vtfpp_vtf_compute_fallback(vtfpp_vtf_handle_t handle, vtfpp_image_conversion_resize_filter_e filter);
VTFPP_API void vtfpp_vtf_remove_fallback(vtfpp_vtf_handle_t handle);