lang/csharp/src/vtfpp/DLL.cs


	[LibraryImport(Name)]
	public static partial ImageConversion.ResizeMethod vtfpp_vtf_get_image_width_resize_method(nint handle);

	[LibraryImport(Name)]
	public static partial ImageConversion.ResizeMethod vtfpp_vtf_get_image_height_resize_method(nint handle);

	[LibraryImport(Name)]
	public static partial void vtfpp_vtf_set_image_resize_methods(nint handle, ImageConversion.ResizeMethod imageWidthResizeMethod, ImageConversion.ResizeMethod imageHeightResizeMethod);

	[LibraryImport(Name)]
	public static partial void vtfpp_vtf_set_image_width_resize_method(nint handle, ImageConversion.ResizeMethod imageWidthResizeMethod);

	[LibraryImport(Name)]
	public static partial void vtfpp_vtf_set_image_height_resize_method(nint handle, ImageConversion.ResizeMethod imageHeightResizeMethod);

	[LibraryImport(Name)]
	public static partial ushort vtfpp_vtf_get_width(nint handle, byte mip);

	[LibraryImport(Name)]
	public static partial ushort vtfpp_vtf_get_padded_width(nint handle, byte mip);

	[LibraryImport(Name)]
	public static partial ushort vtfpp_vtf_get_height(nint handle, byte mip);

	[LibraryImport(Name)]
	public static partial ushort vtfpp_vtf_get_padded_height(nint handle, byte mip);

	[LibraryImport(Name)]
	public static partial void vtfpp_vtf_set_size(nint handle, ushort width, ushort height, ImageConversion.ResizeFilter filter);

	[LibraryImport(Name)]
	public static partial uint vtfpp_vtf_get_flags(nint handle);

	[LibraryImport(Name)]
	public static partial void vtfpp_vtf_set_flags(nint handle, uint flags);

	[LibraryImport(Name)]
	public static partial void vtfpp_vtf_add_flags(nint handle, uint flags);

	[LibraryImport(Name)]
	public static partial void vtfpp_vtf_remove_flags(nint handle, uint flags);

	[LibraryImport(Name)]
	public static partial int vtfpp_vtf_is_srgb(nint handle);

	[LibraryImport(Name)]
	public static partial void vtfpp_vtf_set_srgb(nint handle, int srgb);

	[LibraryImport(Name)]
	public static partial void vtfpp_vtf_compute_transparency_flags(nint handle);

	[LibraryImport(Name)]
	public static partial ImageFormat vtfpp_vtf_get_default_compressed_format(ImageFormat inputFormat, uint version, int isCubeMap);

	[LibraryImport(Name)]
	public static partial ImageFormat vtfpp_vtf_get_format(nint handle);

	[LibraryImport(Name)]
	public static partial void vtfpp_vtf_set_format(nint handle, ImageFormat format, ImageConversion.ResizeFilter filter, float quality);

	[LibraryImport(Name)]
	public static partial byte vtfpp_vtf_get_mip_count(nint handle);

	[LibraryImport(Name)]
	public static partial int vtfpp_vtf_set_mip_count(nint handle, byte mipCount);

	[LibraryImport(Name)]
	public static partial int vtfpp_vtf_set_recommended_mip_count(nint handle);

	[LibraryImport(Name)]
	public static partial void vtfpp_vtf_compute_mips(nint handle, ImageConversion.ResizeFilter filter);

	[LibraryImport(Name)]
	public static partial ushort vtfpp_vtf_get_frame_count(nint handle);

	[LibraryImport(Name)]
	public static partial int vtfpp_vtf_set_frame_count(nint handle, ushort frameCount);

	[LibraryImport(Name)]
	public static partial byte vtfpp_vtf_get_face_count(nint handle);

	[LibraryImport(Name)]
	public static partial int vtfpp_vtf_set_face_count(nint handle, int isCubeMap);

	[LibraryImport(Name)]
	public static partial ushort vtfpp_vtf_get_depth(nint handle, byte mip);

	[LibraryImport(Name)]
	public static partial int vtfpp_vtf_set_depth(nint handle, ushort depth);

	[LibraryImport(Name)]
	public static partial int vtfpp_vtf_set_frame_face_and_depth(nint handle, ushort frameCount, int isCubeMap, ushort depth);

	[LibraryImport(Name)]
	public static partial ushort vtfpp_vtf_get_start_frame(nint handle);

	[LibraryImport(Name)]
	public static partial void vtfpp_vtf_set_start_frame(nint handle, ushort startFrame);

	[LibraryImport(Name)]
	public static partial void vtfpp_vtf_get_reflectivity(nint handle, ref float r, ref float g, ref float b);

	[LibraryImport(Name)]
	public static partial void vtfpp_vtf_set_reflectivity(nint handle, float r, float g, float b);

	[LibraryImport(Name)]
	public static partial void vtfpp_vtf_compute_reflectivity(nint handle);

	[LibraryImport(Name)]
	public static partial float vtfpp_vtf_get_bumpmap_scale(nint handle);

	[LibraryImport(Name)]
	public static partial void vtfpp_vtf_set_bumpmap_scale(nint handle, float bumpMapScale);

	[LibraryImport(Name)]
	public static partial ImageFormat vtfpp_vtf_get_thumbnail_format(nint handle);

	[LibraryImport(Name)]
	public static partial byte vtfpp_vtf_get_thumbnail_width(nint handle);

	[LibraryImport(Name)]
	public static partial byte vtfpp_vtf_get_thumbnail_height(nint handle);

	[LibraryImport(Name)]
	public static partial byte vtfpp_vtf_get_fallback_width(nint handle, byte mip);

	[LibraryImport(Name)]
   	public static partial byte vtfpp_vtf_get_padded_fallback_width(nint handle, byte mip);

	[LibraryImport(Name)]
	public static partial byte vtfpp_vtf_get_fallback_height(nint handle, byte mip);

	[LibraryImport(Name)]
	public static partial byte vtfpp_vtf_get_padded_fallback_height(nint handle, byte mip);

	[LibraryImport(Name)]
	public static partial byte vtfpp_vtf_get_fallback_mip_count(nint handle);

	[LibraryImport(Name)]
    public static partial byte vtfpp_vtf_has_native_resource_support(nint handle);

	[LibraryImport(Name)]
	public static partial uint vtfpp_vtf_get_resources_count(nint handle);

	[LibraryImport(Name)]
	public static partial nint vtfpp_vtf_get_resource_at_index(nint handle, uint index);

	[LibraryImport(Name)]
	public static partial nint vtfpp_vtf_get_resource_with_type(nint handle, Resource.Type type);

	[LibraryImport(Name)]
	public static partial sourcepp.DLL.Buffer vtfpp_vtf_get_palette_resource_frame(nint handle, ushort frame);

	[LibraryImport(Name)]
	public static partial sourcepp.DLL.Buffer vtfpp_vtf_get_particle_sheet_frame_data_raw(nint handle, ref ushort width, ref ushort height, uint shtSequenceId, uint shtFrame, byte shtBounds, byte mip, ushort frame, byte face, ushort slice);

	[LibraryImport(Name)]
	public static partial sourcepp.DLL.Buffer vtfpp_vtf_get_particle_sheet_frame_data_as(nint handle, ImageFormat format, ref ushort width, ref ushort height, uint shtSequenceId, uint shtFrame, byte shtBounds, byte mip, ushort frame, byte face, ushort slice);

	[LibraryImport(Name)]
	public static partial sourcepp.DLL.Buffer vtfpp_vtf_get_particle_sheet_frame_data_as_rgba8888(nint handle, ref ushort width, ref ushort height, uint shtSequenceId, uint shtFrame, byte shtBounds, byte mip, ushort frame, byte face, ushort slice);

	[LibraryImport(Name)]
	public static partial void vtfpp_vtf_set_particle_sheet_resource(nint handle, nint sht);

	[LibraryImport(Name)]
	public static partial void vtfpp_vtf_remove_particle_sheet_resource(nint handle);

	[LibraryImport(Name)]
	public static partial void vtfpp_vtf_set_crc_resource(nint handle, uint value);

	[LibraryImport(Name)]
	public static partial void vtfpp_vtf_remove_crc_resource(nint handle);

	[LibraryImport(Name)]
	public static partial void vtfpp_vtf_set_lod_resource(nint handle, byte u, byte v, byte u360, byte v360);

	[LibraryImport(Name)]
	public static partial void vtfpp_vtf_remove_lod_resource(nint handle);

	[LibraryImport(Name)]
	public static partial void vtfpp_vtf_set_extended_flags_resource(nint handle, uint value);

	[LibraryImport(Name)]
	public static partial void vtfpp_vtf_remove_extended_flags_resource(nint handle);

	[LibraryImport(Name, StringMarshalling = StringMarshalling.Utf8)]
	public static partial void vtfpp_vtf_set_keyvalues_data_resource(nint handle, string value);

	[LibraryImport(Name)]
	public static partial void vtfpp_vtf_remove_keyvalues_data_resource(nint handle);

	[LibraryImport(Name)]
	public static partial void vtfpp_vtf_set_hotspot_data_resource(nint handle, nint hot);

	[LibraryImport(Name)]
	public static partial void vtfpp_vtf_remove_hotspot_data_resource(nint handle);

	[LibraryImport(Name)]
	public static partial short vtfpp_vtf_get_compression_level(nint handle);

	[LibraryImport(Name)]
	public static partial void vtfpp_vtf_set_compression_level(nint handle, short compressionLevel);

	[LibraryImport(Name)]
	public static partial CompressionMethod vtfpp_vtf_get_compression_method(nint handle);

	[LibraryImport(Name)]
	public static partial void vtfpp_vtf_set_compression_method(nint handle, CompressionMethod compressionMethod);

	[LibraryImport(Name)]
	public static partial int vtfpp_vtf_has_image_data(nint handle);

	[LibraryImport(Name)]
	public static unsafe partial byte* vtfpp_vtf_get_image_data_raw(nint handle, ref ulong imageLen, byte mip, ushort frame, byte face, ushort slice);

	[LibraryImport(Name)]
	public static partial sourcepp.DLL.Buffer vtfpp_vtf_get_image_data_as(nint handle, ImageFormat format, byte mip, ushort frame, byte face, ushort slice);

	[LibraryImport(Name)]
	public static partial sourcepp.DLL.Buffer vtfpp_vtf_get_image_data_as_rgba8888(nint handle, byte mip, ushort frame, byte face, ushort slice);

	[LibraryImport(Name)]
	public static partial int vtfpp_vtf_set_image_from_mem(nint handle, ReadOnlySpan<byte> imageData, ulong imageLen, ImageFormat format, ushort width, ushort height, ImageConversion.ResizeFilter filter, byte mip, ushort frame, byte face, ushort slice, float quality);

	[LibraryImport(Name, StringMarshalling = StringMarshalling.Utf8)]
	public static partial int vtfpp_vtf_set_image_from_file(nint handle, string imagePath, ImageConversion.ResizeFilter filter, byte mip, ushort frame, byte face, ushort slice, float quality, ImageConversion.ResizeBounds resizeBounds);

	[LibraryImport(Name, StringMarshalling = StringMarshalling.Utf8)]
	public static partial int vtfpp_vtf_save_image_to_file(nint handle, string imagePath, byte mip, ushort frame, byte face, ushort slice, ImageConversion.FileFormat fileFormat);

	[LibraryImport(Name)]
	public static partial int vtfpp_vtf_has_thumbnail_data(nint handle);

	[LibraryImport(Name)]
	public static unsafe partial byte* vtfpp_vtf_get_thumbnail_data_raw(nint handle, ref ulong imageLen);

	[LibraryImport(Name)]
	public static partial sourcepp.DLL.Buffer vtfpp_vtf_get_thumbnail_data_as(nint handle, ImageFormat format);

	[LibraryImport(Name)]
	public static partial sourcepp.DLL.Buffer vtfpp_vtf_get_thumbnail_data_as_rgba8888(nint handle);

	[LibraryImport(Name)]
	public static partial void vtfpp_vtf_set_thumbnail_from_mem(nint handle, ReadOnlySpan<byte> imageData, ulong imageLen, ImageFormat format, ushort width, ushort height, float quality);

	[LibraryImport(Name, StringMarshalling = StringMarshalling.Utf8)]
	public static partial void vtfpp_vtf_set_thumbnail_from_file(nint handle, string imagePath, float quality);

	[LibraryImport(Name)]
	public static partial void vtfpp_vtf_compute_thumbnail(nint handle, ImageConversion.ResizeFilter filter, float quality);

	[LibraryImport(Name)]
	public static partial void vtfpp_vtf_remove_thumbnail(nint handle);

	[LibraryImport(Name, StringMarshalling = StringMarshalling.Utf8)]
	public static partial int vtfpp_vtf_save_thumbnail_to_file(nint handle, string imagePath, ImageConversion.FileFormat fileFormat);

	[LibraryImport(Name)]
	public static partial int vtfpp_vtf_has_fallback_data(nint handle);

	[LibraryImport(Name)]
	public static unsafe partial byte* vtfpp_vtf_get_fallback_data_raw(nint handle, ref ulong imageLen, byte mip, ushort frame, byte face);

	[LibraryImport(Name)]
	public static partial sourcepp.DLL.Buffer vtfpp_vtf_get_fallback_data_as(nint handle, ImageFormat format, byte mip, ushort frame, byte face);

	[LibraryImport(Name)]
	public static partial sourcepp.DLL.Buffer vtfpp_vtf_get_fallback_data_as_rgba8888(nint handle, byte mip, ushort frame, byte face);

	[LibraryImport(Name)]
	public static partial void vtfpp_vtf_compute_fallback(nint handle, ImageConversion.ResizeFilter filter);

	[LibraryImport(Name)]
	public static partial void vtfpp_vtf_remove_fallback(nint handle);
